--- a/index.html
+++ b/index.html
@@ -8,13 +8,13 @@
   <div class="wrapper">
     <div class="gallery">
       <div class="pict">
-        <img src="" alt="">
+        <img src="images/whitesquare.jpg" alt="">
       </div>
       <div class="pict">
-        <img src="" alt="">
+        <img src="images/whitesquare.jpg" alt="">
       </div>
       <div class="pict">
-        <img src="" alt="">
+        <img src="images/whitesquare.jpg" alt="">
       </div>
     </div>
   </div>
