--- a/index.html
+++ b/index.html
@@ -9,7 +9,7 @@
   <div class="wrapper">
     <div class="gallery">
       <div class="pict">
-        <img src="images/whitesquare.jpg" alt="">
+        <a href="https://github.com/QWITARA/whitesquare-bootstrap" target="?blank"><img src="images/whitesquare.jpg" alt="whitesquare"></a>
       </div>
       <div class="pict">
         <img src="images/whitesquare.jpg" alt="">
