--- a/index.html
+++ b/index.html
@@ -9,7 +9,9 @@
   <div class="wrapper">
     <div class="gallery">
       <div class="pict">
-        <a href="https://github.com/QWITARA/whitesquare-bootstrap" target="?blank"><img src="images/whitesquare.jpg" alt="whitesquare"></a>
+        <a href="https://github.com/QWITARA/whitesquare-bootstrap" target="?blank"><img src="images/whitesquare.jpg" alt="whitesquare">
+        <div class="pict-hover-text">Whitesquare</div>
+        </a>
       </div>
       <div class="pict">
         <img src="images/whitesquare.jpg" alt="">
