--- a/index.html
+++ b/index.html
@@ -7,10 +7,11 @@
 </head>
 <body>
   <div class="wrapper">
+    <h1>Учебные макеты</h1>
     <div class="gallery">
       <div class="pict">
-        <a href="https://github.com/QWITARA/whitesquare-bootstrap" target="?blank"><img src="images/whitesquare.jpg" alt="whitesquare">
-        <div class="pict-hover-text">Whitesquare</div>
+        <a href="https://github.com/QWITARA/whitesquare-bootstrap" target="_blank"><img src="images/whitesquare.jpg" alt="whitesquare">
+        <div class="pict-hover-text">Whitesquare-bootstrap</div>
         </a>
       </div>
       <div class="pict">
