--- a/index.html
+++ b/index.html
@@ -15,10 +15,10 @@
         </a>
       </div>
       <div class="pict">
-        <img src="images/whitesquare.jpg" alt="">
+        <img src="" alt="">
       </div>
       <div class="pict">
-        <img src="images/whitesquare.jpg" alt="">
+        <img src="" alt="">
       </div>
     </div>
   </div>
