--- a/index.html
+++ b/index.html
@@ -10,7 +10,7 @@
     <h1>Учебные макеты</h1>
     <div class="gallery">
       <div class="pict">
-        <a href="https://github.com/QWITARA/whitesquare-bootstrap" target="_blank"><img src="images/whitesquare.jpg" alt="whitesquare">
+        <a href="https://github.com/QWITARA/whitesquare-bootstrap" target="_blank"><img src="images/whitesquare-preview.jpg" alt="whitesquare">
         <div class="pict-hover-text"><div>Whitesquare-bootstrap<br>habrahabr</div></div>
         </a>
       </div>
