--- a/index.html
+++ b/index.html
@@ -11,7 +11,7 @@
     <div class="gallery">
       <div class="pict">
         <a href="https://github.com/QWITARA/whitesquare-bootstrap" target="_blank"><img src="images/whitesquare-preview.jpg" alt="whitesquare">
-        <div class="pict-hover-text"><div>Whitesquare-bootstrap<br>habrahabr</div></div>
+        <div class="pict-text-wrap"><div class="pict-text">Whitesquare-bootstrap<br>habrahabr</div></div>
         </a>
       </div>
     </div>
