--- a/index.html
+++ b/index.html
@@ -14,6 +14,11 @@
         <div class="pict-text-wrap"><div class="pict-text">Whitesquare-bootstrap<br>habrahabr</div></div>
         </a>
       </div>
+      <div class="pict">
+        <a href="https://qwitara.github.io/sssoon-bootstrap" target="_blank"><img src="images/whitesquare-preview.jpg" alt="sssoon">
+        <div class="pict-text-wrap"><div class="pict-text">Sssoon-bootstrap<br>coming soon one screen page</div></div>
+        </a>
+      </div>
     </div>
   </div>
 </body>
