--- a/index.html
+++ b/index.html
@@ -15,7 +15,7 @@
         </a>
       </div>
       <div class="pict">
-        <a href="https://qwitara.github.io/sssoon-bootstrap" target="_blank"><img src="images/sssoon-prev.jpg" alt="sssoon">
+        <a href="https://github.com/QWITARA/sssoon-bootstrap" target="_blank"><img src="images/sssoon-prev.jpg" alt="sssoon">
         <div class="pict-text-wrap"><div class="pict-text">Sssoon-bootstrap<br>coming soon one screen page</div></div>
         </a>
       </div>
