--- a/index.html
+++ b/index.html
@@ -19,6 +19,11 @@
         <div class="pict-text-wrap"><div class="pict-text">Sssoon-bootstrap<br>coming soon one screen page</div></div>
         </a>
       </div>
+      <div class="pict">
+        <a href="https://github.com/QWITARA/Barbershop-Borodinsky" target="_blank"><img src="images/whitesquare-preview.jpg" alt="Barbershop-Borodinsky">
+        <div class="pict-text-wrap"><div class="pict-text">Базовый интенсив<br>HTML Academy</div></div>
+        </a>
+      </div>
     </div>
   </div>
 </body>
