--- a/index.html
+++ b/index.html
@@ -21,7 +21,7 @@
       </div>
       <div class="pict">
         <a href="https://github.com/QWITARA/Barbershop-Borodinsky" target="_blank"><img src="images/whitesquare-preview.jpg" alt="Barbershop-Borodinsky">
-        <div class="pict-text-wrap"><div class="pict-text">Базовый интенсив<br>HTML Academy</div></div>
+        <div class="pict-text-wrap"><div class="pict-text">Barbershop Borodinsky<br>Базовый интенсив HTML Academy</div></div>
         </a>
       </div>
     </div>
