--- a/index.html
+++ b/index.html
@@ -20,7 +20,7 @@
         </a>
       </div>
       <div class="pict">
-        <a href="https://github.com/QWITARA/Barbershop-Borodinsky" target="_blank"><img src="images/whitesquare-preview.jpg" alt="Barbershop-Borodinsky">
+        <a href="https://github.com/QWITARA/Barbershop-Borodinsky" target="_blank"><img src="images/barbershop.jpg" alt="Barbershop-Borodinsky">
         <div class="pict-text-wrap"><div class="pict-text">Barbershop Borodinsky<br>Базовый интенсив HTML Academy</div></div>
         </a>
       </div>
